--- a/XmlConfigLibrary/XmlConfigLibrary.csproj
+++ b/XmlConfigLibrary/XmlConfigLibrary.csproj
@@ -32,12 +32,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="BinaryParser.cs" />
+    <Compile Include="BooleanParser.cs" />
     <Compile Include="DateTimeParser.cs" />
     <Compile Include="EnumParser.cs" />
     <Compile Include="FontParser.cs" />
